# backend-challenge

./: Dockerfile  README.md  alembic.ini  docker-compose.yaml  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 08daca05613f_create_sprocket_table.py  6869ed8dc9b0_create_factory_table.py
app/: main.py
app/config/: dependency.py  settings.py
app/dao/: factory_dao.py  sprocket_dao.py
app/orm/: factory.py  sprocket.py
config/: dependency.py
dao/: factory_dao.py  sprocket_dao.py
dto/: sprocket.py
model/: factory.py  sprocket.py
orm/: __init__.py  factory.py  sprocket.py
tests/: test_api.py
