[tool.poetry]
name = "backend-challenge"
version = "0.1.0"
description = ""
authors = ["Andrew Miller <avmiller@outlook.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^1.9.1"
pytest = "^7.1.3"
assertpy = "^1.1"
fastapi = "^0.88.0"
uvicorn = "^0.20.0"
SQLAlchemy = "^1.4.41"
alembic = "^1.9.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
